--- a/.github/workflows/lint-workflow.yml
+++ b/.github/workflows/lint-workflow.yml
@@ -1,32 +1,19 @@
-name: Build and test workflow
+name: Lint workflow
 on:
   push:
     branches:
-      - "*"
+      - '*'
   pull_request:
     branches:
-      - "*"
+      - '*'
 env:
   OPENSEARCH_DASHBOARDS_VERSION: 'main'
-
 jobs:
-  Get-CI-Image-Tag:
-    uses: opensearch-project/opensearch-build/.github/workflows/get-ci-image-tag.yml@main
-    with:
-      product: opensearch-dashboards
-
-  build-and-test:
-    name: Build query-insights-dashboards plugin and run unit tests
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-    runs-on: ${{ matrix.os }}
+  tests:
+    name: Run lint
+    runs-on: ubuntu-latest
     steps:
-      # Enable longer filenames for windows
-      - name: Enable longer filenames
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: git config --system core.longpaths true
-      - name: Checkout OpenSearch-Dashboards
+      - name: Checkout OpenSearch Dashboards
         uses: actions/checkout@v2
         with:
           repository: opensearch-project/OpenSearch-Dashboards
@@ -46,17 +33,15 @@ jobs:
           npm i -g yarn@$YARN_VERSION
       - run: node -v
       - run: yarn -v
-      - name: Checkout Query Insights OpenSearch Dashboards plugin
+      - name: Checkout Query Insights Dashboards plugin
         uses: actions/checkout@v2
         with:
           path: OpenSearch-Dashboards/plugins/query-insights-dashboards
-      - name: Bootstrap plugin/OpenSearch-Dashboards
+      - name: Bootstrap plugin/opensearch-dashboards
         run: |
           cd OpenSearch-Dashboards/plugins/query-insights-dashboards
           yarn osd bootstrap
-      - name: Run unit tests
+      - name: Run lint
         run: |
           cd OpenSearch-Dashboards/plugins/query-insights-dashboards
-          yarn run test:jest --coverage
-      - name: Uploads coverage
-        uses: codecov/codecov-action@v1
+          yarn run lint
