--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "lint-staged": "^10.2.0",
     "ts-loader": "^6.2.1",
     "string.prototype.replaceall": "1.0.7"
-  }
+  },
+  "eslintIgnore": [
+    "node_modules/*",
+    "target/*"
+  ]
 }
