--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:jest": "../../node_modules/.bin/jest --config ./test/jest.config.js",
     "test:jest:dev": "../../node_modules/.bin/jest --watch --config ./test/jest.config.js",
     "test:jest:update-snapshots": "yarn run test:jest -u",
-    "lint": "node ../../scripts/eslint ."
+    "lint": "node ../../scripts/eslint .",
+    "postbuild": "echo Renaming build artifact to [$npm_package_config_id-$npm_package_version.zip] && mv build/$npm_package_config_id*.zip build/$npm_package_config_id-$npm_package_version.zip"
   },
   "dependencies": {
     "object-hash": "^3.0.0",
