updated package.json (#126)
Signed-off-by: David Zane <davizane@amazon.com>

--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
     "json5": "^2.2.3",
     "@babel/core": "^7.26.10",
     "@babel/traverse": "^7.20.12",
-    "@cypress/request": "^3.0.0"
+    "@cypress/request": "^3.0.0",
+    "braces": "3.0.3",
+    "micromatch": "4.0.8",
+    "cross-spawn": "7.0.5",
+    "serialize-javascript": "6.0.2"
+
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
