--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "postbuild": "echo Renaming build artifact to [$npm_package_config_id-$npm_package_version.zip] && mv build/$npm_package_config_id*.zip build/$npm_package_config_id-$npm_package_version.zip"
   },
   "dependencies": {
+    "braces": "^3.0.3",
+    "cross-spawn": "^7.0.6",
+    "elliptic": "^6.6.1",
+    "micromatch": "^4.0.8",
     "object-hash": "^3.0.0",
-    "plotly.js-dist": "^2.34.0"
+    "plotly.js-dist": "^2.34.0",
+    "serialize-javascript": "^6.0.2"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
@@ -41,11 +46,11 @@
     "@babel/core": "^7.20.12",
     "@babel/traverse": "^7.20.12",
     "@cypress/request": "^3.0.0",
-    "braces": "3.0.3",
-    "micromatch": "4.0.8",
-    "cross-spawn": "7.0.5",
-    "serialize-javascript": "6.0.2"
-
+    "braces": "^3.0.3",
+    "micromatch": "^4.0.8",
+    "serialize-javascript": "^6.0.2",
+    "elliptic": "^6.6.1",
+    "cross-spawn": "^7.0.5"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
@@ -54,8 +59,8 @@
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react-dom": "^16.9.8",
     "@types/object-hash": "^3.0.0",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.3.2",
     "cypress": "12.17.4",
     "cypress-real-events": "1.7.6",
@@ -67,8 +72,8 @@
     "jest-cli": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
     "lint-staged": "^10.2.0",
-    "ts-loader": "^6.2.1",
-    "string.prototype.replaceall": "1.0.7"
+    "string.prototype.replaceall": "1.0.7",
+    "ts-loader": "^6.2.1"
   },
   "eslintIgnore": [
     "node_modules/*",
