--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "object-hash": "^3.0.0",
-    "plotly.js-dist": "^2.34.0"
+    "plotly.js-dist": "^2.34.0",
+    "@babel/helpers": "^7.26.10",
+    "@babel/runtime": "^7.26.10",
+    "@babel/runtime-corejs3": "^7.26.10"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
@@ -45,7 +48,10 @@
     "micromatch": "4.0.8",
     "cross-spawn": "7.0.5",
     "serialize-javascript": "6.0.2",
-    "glob-parent": "5.1.2"
+    "glob-parent": "5.1.2",
+    "@babel/helpers": "^7.26.10",
+    "@babel/runtime": "^7.26.10",
+    "@babel/runtime-corejs3": "^7.26.10"
 },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
