--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "object-hash": "^3.0.0",
-    "plotly.js-dist": "^2.34.0"
+    "plotly.js-dist": "^2.34.0",
+    "@babel/helpers": "^7.22.9",
+    "@babel/runtime": "^7.22.9",
+    "@babel/runtime-corejs3": "^7.22.9"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
@@ -44,8 +47,11 @@
     "braces": "3.0.3",
     "micromatch": "4.0.8",
     "cross-spawn": "7.0.5",
-    "serialize-javascript": "6.0.2"
-
+    "serialize-javascript": "6.0.2",
+    "glob-parent": "5.1.2",
+    "@babel/helpers": "^7.22.9",
+    "@babel/runtime": "^7.22.9",
+    "@babel/runtime-corejs3": "^7.22.9"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.17.1",
