--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -15,10 +15,8 @@ jobs:
     name: Run Cypress E2E tests
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         include:
-          - os: windows-latest
-            cypress_cache_folder: ~/AppData/Local/Cypress/Cache
           - os: ubuntu-latest
             cypress_cache_folder: ~/.cache/Cypress
     runs-on: ${{ matrix.os }}
@@ -32,10 +30,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 21
-
-      - name: Enable longer filenames
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: git config --system core.longpaths true
 
       - name: Checkout Query Insights
         uses: actions/checkout@v2
@@ -95,15 +89,8 @@ jobs:
           yarn start --no-base-path --no-watch --server.host="0.0.0.0" &
         shell: bash
 
-      # Window is slow so wait longer
-      - name: Sleep until OSD server starts - windows
-        if: ${{ matrix.os == 'windows-latest' }}
-        run: Start-Sleep -s 600
-        shell: powershell
-
-      - name: Sleep until OSD server starts - non-windows
-        if: ${{ matrix.os != 'windows-latest' }}
-        run: sleep 500
+      - name: Sleep until OSD server starts
+        run: sleep 1000
         shell: bash
 
       - name: Install Cypress
@@ -133,7 +120,7 @@ jobs:
         with:
           working-directory: OpenSearch-Dashboards/plugins/query-insights-dashboards
           command: yarn run cypress run
-          wait-on: 'http://localhost:5601'
+#          wait-on: 'http://localhost:5601'
           wait-on-timeout: 600
           browser: chrome
         env:
