--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@babel/runtime-corejs3": "^7.22.9",
     "object-hash": "^3.0.0",
     "plotly.js-dist": "^2.34.0",
-    "vega": "5.25.0",
+    "vega": "^5.32.0",
     "vega-embed": "6.21.0",
-    "vega-lite": "5.14.0"
+    "vega-lite": "^5.6.0"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
