[Improvement] remove duplicate requests on overview page loading (#179)
* Bug-fix Duplicate Request on page load

Signed-off-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>

* bug fix

Signed-off-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>

* Added mock RetrieveQueries

Signed-off-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>

* Added mock RetrieveQueries

Signed-off-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>

---------

Signed-off-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>
Co-authored-by: Kishore Kumaar Natarajan <kkumaarn@amazon.com>
Signed-off-by: Chenyang Ji <cyji@amazon.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - "*"
 env:
-  OPENSEARCH_DASHBOARDS_VERSION: 'main'
+  OPENSEARCH_DASHBOARDS_VERSION: '3.0.0'
   OPENSEARCH_VERSION: '3.0.0-beta1-SNAPSHOT'
   QUERY_INSIGHTS_BRANCH: '3.0'
   GRADLE_VERSION: '7.6.1'
