--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@babel/runtime": "^7.26.10",
     "@babel/runtime-corejs3": "^7.22.9",
     "filesize": "^10.1.6",
-    "luxon": "^3.6.1",
     "object-hash": "^3.0.0",
     "plotly.js-dist": "^2.34.0",
     "vega": "^5.32.0",
     "vega-embed": "6.21.0",
-    "vega-lite": "^5.6.0"
+    "vega-lite": "^5.6.0",
+    "luxon": "^3.2.1"
   },
   "resolutions": {
     "@types/react": "^16.9.8",
@@ -57,7 +57,6 @@
     "@babel/helpers": "^7.22.9",
     "@babel/runtime": "^7.26.10",
     "@babel/runtime-corejs3": "^7.22.9",
-    "luxon": "^3.2.1"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.1",
