--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "glob-parent": "5.1.2",
     "@babel/helpers": "^7.22.9",
     "@babel/runtime": "^7.26.10",
-    "@babel/runtime-corejs3": "^7.22.9",
+    "@babel/runtime-corejs3": "^7.22.9"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^6.0.1",
