--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -8,9 +8,12 @@ on:
       - "*"
 env:
   OPENSEARCH_DASHBOARDS_VERSION: 'main'
-  OPENSEARCH_VERSION: '3.0.0-beta1-SNAPSHOT'
+  OPENSEARCH_VERSION: '3.1.0-SNAPSHOT'
   QUERY_INSIGHTS_BRANCH: 'main'
   GRADLE_VERSION: '7.6.1'
+  CYPRESS_VIDEO: true
+  CYPRESS_SCREENSHOT_ON_RUN_FAILURE: true
+
 jobs:
   tests:
     name: Run Cypress E2E tests
