--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           path: OpenSearch
           repository: opensearch-project/OpenSearch
-          ref: ${{ env.OPENSEARCH_VERSION }}
+          ref: main
 
       - name: Build Required Plugins
         run: |
