check if it can run w/o ruleframework
Signed-off-by: Lingxi Chen <lingxich@amazon.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - "*"
 env:
+  OPENSEARCH_BRANCH: '3.1'
   OPENSEARCH_DASHBOARDS_VERSION: 'main'
   OPENSEARCH_VERSION: '3.1.0-SNAPSHOT'
   QUERY_INSIGHTS_BRANCH: 'main'
@@ -57,19 +58,19 @@ jobs:
         with:
           path: OpenSearch
           repository: opensearch-project/OpenSearch
-          ref: 3.1
+          ref: ${{ env.OPENSEARCH_BRANCH }}
 
 
       - name: Build Required Plugins
         run: |
           cd OpenSearch
           # Build rule-framework (autotagging-commons)
-          ./gradlew :modules:autotagging-commons:build -x test
+#          ./gradlew :modules:autotagging-commons:build -x test
           # Build WLM plugin
           ./gradlew :plugins:workload-management:assemble -x test
 
-          echo "Checking autotagging-commons build directory:"
-          ls -la modules/autotagging-commons/build/distributions/
+#          echo "Checking autotagging-commons build directory:"
+#          ls -la modules/autotagging-commons/build/distributions/
           echo "Checking WLM build directory:"
           ls -la plugins/workload-management/build/distributions/
 
@@ -77,14 +78,14 @@ jobs:
         run: |
           mkdir -p query-insights/plugins
 
-          find OpenSearch/modules/autotagging-commons/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
-          find OpenSearch/plugins/workload-management/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
+#          find OpenSearch/modules/autotagging-commons/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
+#          find OpenSearch/plugins/workload-management/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
+#          cp modules/autotagging-commons/build/distributions/rule-framework-${OPENSEARCH_VERSION}.zip query-insights/plugins/
+          cp plugins/workload-management/build/distributions/workload-management-${OPENSEARCH_VERSION}.zip query-insights/plugins/
 
           # List what was copied
           echo "Contents of plugins directory:"
           ls -la query-insights/plugins/
-#          cp modules/autotagging-commons/build/distributions/rule-framework-${OPENSEARCH_VERSION}.zip query-insights/plugins/
-#          cp plugins/workload-management/build/distributions/workload-management-${OPENSEARCH_VERSION}.zip query-insights/plugins/
 
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
