--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           cd OpenSearch
           # Build rule-framework (autotagging-commons)
-#          ./gradlew :modules:autotagging-commons:build -x test
+          ./gradlew :modules:autotagging-commons:build -x test
           # Build WLM plugin
           ./gradlew :plugins:workload-management:assemble -x test
 
@@ -78,7 +78,7 @@ jobs:
 
 #          find OpenSearch/modules/autotagging-commons/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
 #          find OpenSearch/plugins/workload-management/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
-#          cp modules/autotagging-commons/build/distributions/rule-framework-${OPENSEARCH_VERSION}.zip query-insights/plugins/
+          cp modules/autotagging-commons/build/distributions/rule-framework-${OPENSEARCH_VERSION}.zip query-insights/plugins/
           cp plugins/workload-management/build/distributions/workload-management-${OPENSEARCH_VERSION}.zip query-insights/plugins/
 
           # List what was copied
