--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -69,6 +69,8 @@ jobs:
           # Build WLM plugin
           ./gradlew :plugins:workload-management:assemble -x test
 
+          echo "Checking autotagging-commons build directory:"
+          ls -la modules/autotagging-commons/build/distributions/
           echo "Checking WLM build directory:"
           ls -la plugins/workload-management/build/distributions/
 
@@ -78,12 +80,12 @@ jobs:
 
           find OpenSearch/modules/autotagging-commons/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
           find OpenSearch/plugins/workload-management/build/distributions/ -name "*.zip" -exec cp {} query-insights/plugins/ \;
-#           cp OpenSearch/modules/autotagging-commons/build/distributions/rule-framework-${OPENSEARCH_VERSION}.zip query-insights/plugins/
-#           cp OpenSearch/plugins/workload-management/build/distributions/workload-management-${OPENSEARCH_VERSION}.zip query-insights/plugins/
 
           # List what was copied
           echo "Contents of plugins directory:"
           ls -la query-insights/plugins/
+#          cp modules/autotagging-commons/build/distributions/rule-framework-${OPENSEARCH_VERSION}.zip query-insights/plugins/
+#          cp plugins/workload-management/build/distributions/workload-management-${OPENSEARCH_VERSION}.zip query-insights/plugins/
 
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
