deleted code for testing only
Signed-off-by: Lingxi Chen <lingxich@amazon.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -39,19 +39,12 @@ jobs:
           java-version: 21
           distribution: temurin
 
-#      - name: Checkout Query Insights
-#        uses: actions/checkout@v4
-#        with:
-#          path: query-insights
-#          repository: opensearch-project/query-insights
-#          ref: ${{ env.QUERY_INSIGHTS_BRANCH }}
-
       - name: Checkout Query Insights
         uses: actions/checkout@v4
         with:
           path: query-insights
-          repository: Lindsay-00/query-insights  # This is only for test
-          ref: wlm_plugin
+          repository: opensearch-project/query-insights
+          ref: ${{ env.QUERY_INSIGHTS_BRANCH }}
 
       - name: Checkout OpenSearch
         uses: actions/checkout@v4
