--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -34,7 +34,12 @@ jobs:
       - name: Get OpenSearch version from file
         id: get_version
         run: |
-          echo "OPENSEARCH_VERSION=$(get-opensearch-version.js)" >> $GITHUB_ENV
+          echo "OPENSEARCH_VERSION=$(node ./get-opensearch-version.js)" >> $GITHUB_ENV
+      - name: Show extracted version
+        run:
+          echo "Version extracted: $OPENSEARCH_VERSION"
+        env:
+          OPENSEARCH_VERSION: ${{ env.OPENSEARCH_VERSION }}
 
       - name: Set up JDK
         uses: actions/setup-java@v4
