--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -31,10 +31,10 @@ jobs:
       # avoid warnings like "tput: No value for $TERM and no -T specified"
       TERM: xterm
     steps:
-      - name: Get OpenSearch version from file
-        id: get_version
+      - name: Get OpenSearch version
         run: |
-          echo "OPENSEARCH_VERSION=$(node ./get-opensearch-version.js)" >> $GITHUB_ENV
+            echo "OPENSEARCH_VERSION=$(node ./get-opensearch-version.js)" >> $GITHUB_ENV
+
       - name: Show extracted version
         run:
           echo "Version extracted: $OPENSEARCH_VERSION"
