--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -36,11 +36,11 @@ jobs:
             echo "OPENSEARCH_VERSION=$(node ./get-opensearch-version.js)" >> $GITHUB_ENV
 
       - name: Show extracted version
-        run:
+        run: |
           echo "Version extracted: $OPENSEARCH_VERSION"
         env:
           OPENSEARCH_VERSION: ${{ env.OPENSEARCH_VERSION }}
-
+          
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
