--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -33,14 +33,14 @@ jobs:
     steps:
       - name: Get OpenSearch version
         run: |
-            echo "OPENSEARCH_VERSION=$(node ./get-opensearch-version.js)" >> $GITHUB_ENV
+            echo "OPENSEARCH_VERSION=$(node get-opensearch-version.js)" >> $GITHUB_ENV
 
       - name: Show extracted version
         run: |
           echo "Version extracted: $OPENSEARCH_VERSION"
         env:
           OPENSEARCH_VERSION: ${{ env.OPENSEARCH_VERSION }}
-          
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
