--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: Get OpenSearch version
         run: |
-            echo "OPENSEARCH_VERSION=$(node get-opensearch-version.js)" >> $GITHUB_ENV
+            echo "OPENSEARCH_VERSION=$(node ../get-opensearch-version.js)" >> $GITHUB_ENV
 
       - name: Show extracted version
         run: |
