--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -33,13 +33,11 @@ jobs:
     steps:
       - name: Get pwd
         run: pwd
-      - name: Confirm script exists
-        run: ls -la OpenSearch-Dashboards/plugins/query-insights-dashboards
-      - name: Confirm script exists
-        run: ls -la
+
       - name: Get OpenSearch version
         run: |
-            echo "OPENSEARCH_VERSION=$(node ../get-opensearch-version.js)" >> $GITHUB_ENV
+          cd OpenSearch-Dashboards/plugins/query-insights-dashboards
+          echo "OPENSEARCH_VERSION=$(node get-opensearch-version.js)" >> $GITHUB_ENV
 
       - name: Show extracted version
         run: |
