enable wlm mode in pipeline
Signed-off-by: Lingxi Chen <lingxich@amazon.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -149,9 +149,18 @@ jobs:
           echo -e "\nInstalled Plugins:"
           curl -s http://localhost:9200/_cat/plugins | sort
 
+          # Enable WLM mode using short-form key
+          echo -e "\nEnabling WLM mode:"
+          curl -X PUT "http://localhost:9200/_cluster/settings" \
+          -H 'Content-Type: application/json' \
+          -d '{"persistent":{"wlm.workload_group.mode":"enabled"}}' | jq '.'
+
+
           # Test WLM stats endpoint
           echo -e "\nTesting WLM stats endpoint:"
           curl -s http://localhost:9200/_wlm/workload_group | jq '.'
+          echo -e "\nTesting if wlm mode is enabled:"
+          curl -s http://localhost:9200/_cluster/settings | jq '.persistent."wlm.workload_group.mode"'
         shell: bash
 
 
