fix 3.2 cypress test pipeline
Signed-off-by: Chenyang Ji <cyji@amazon.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -17,7 +17,7 @@ env:
   OPENSEARCH_BRANCH: '3.2'
   OPENSEARCH_DASHBOARDS_VERSION: '3.2.0'
   OPENSEARCH_VERSION: '3.2.0-SNAPSHOT'
-  QUERY_INSIGHTS_BRANCH: 'main'
+  QUERY_INSIGHTS_BRANCH: '3.2'
   GRADLE_VERSION: '7.6.1'
   CYPRESS_VIDEO: true
   CYPRESS_SCREENSHOT_ON_RUN_FAILURE: true
