fix cypress pipeline for 3.1
Signed-off-by: Chenyang Ji <cyji@amazon.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -7,9 +7,9 @@ on:
     branches:
       - "*"
 env:
-  OPENSEARCH_DASHBOARDS_VERSION: 'main'
+  OPENSEARCH_DASHBOARDS_VERSION: '3.1.0'
   OPENSEARCH_VERSION: '3.1.0-SNAPSHOT'
-  QUERY_INSIGHTS_BRANCH: 'main'
+  QUERY_INSIGHTS_BRANCH: '3.1'
   GRADLE_VERSION: '7.6.1'
   CYPRESS_VIDEO: true
   CYPRESS_SCREENSHOT_ON_RUN_FAILURE: true
