fix cypress test pipeline for 3.0
Signed-off-by: Chenyang Ji <cyji@amazon.com>

--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -9,7 +9,7 @@ on:
 env:
   OPENSEARCH_DASHBOARDS_VERSION: 'main'
   OPENSEARCH_VERSION: '3.0.0-beta1-SNAPSHOT'
-  QUERY_INSIGHTS_BRANCH: 'main'
+  QUERY_INSIGHTS_BRANCH: '3.0'
   GRADLE_VERSION: '7.6.1'
 jobs:
   tests:
