--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,7 +7,6 @@ on:
     branches:
       - "*"
 env:
-  OPENSEARCH_DASHBOARDS_VERSION: 'main'
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
 jobs:
@@ -23,6 +22,20 @@ jobs:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: actions/checkout@v4
+      - name: Set env
+        run: |
+          opensearch_version=$(node -p "require('./package.json').opensearchDashboards.version")
+          major_version=$(echo $opensearch_version | cut -d. -f1)
+          minor_version=$(echo $opensearch_version | cut -d. -f2)
+          branch_version=${major_version}.${minor_version}
+          opensearch_dashboards_branch=$branch_version
+          base_branch=${{ github.base_ref }}
+          if [ "$base_branch" = "main" ]; then
+            opensearch_dashboards_branch=main
+          fi
+          echo "OPENSEARCH_DASHBOARDS_BRANCH=$opensearch_dashboards_branch" >> $GITHUB_ENV
+        shell: bash
       # Enable longer filenames for windows
       - name: Enable longer filenames
         if: ${{ matrix.os == 'windows-latest' }}
@@ -31,7 +44,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: opensearch-project/OpenSearch-Dashboards
-          ref: ${{ env.OPENSEARCH_DASHBOARDS_VERSION }}
+          ref: ${{ env.OPENSEARCH_DASHBOARDS_BRANCH }}
           path: OpenSearch-Dashboards
       - name: Setup Node
         uses: actions/setup-node@v3
