--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -9,6 +9,7 @@ on:
 env:
   OPENSEARCH_DASHBOARDS_VERSION: 'main'
   QUERY_INSIGHTS_BRANCH: 'main'
+  OPENSEARCH_BRANCH: '3.3'
   GRADLE_VERSION: '7.6.1'
   CYPRESS_VIDEO: true
   CYPRESS_SCREENSHOT_ON_RUN_FAILURE: true
